fixed twitter icon link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <img src="/actuallogo.svg" class="logo">
         <a href="https://twitter.com/bionicashish" target="_blank"><p>Follow me on Twitter</p></a>
-        <a class="twtr" href="https://bionicdesigns.notion.site/ActualWork-Memo-364a19bc241e41b5ba26213cb89321da" target="_blank"><img  src="/twitter-fill.svg"></a>
+        <a class="twtr" href="https://twitter.com/bionicashish" target="_blank"><img  src="/twitter-fill.svg"></a>
     </header>
     <main>
         <div  class="main-content">
