--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="decription" content="we make building in public fun and easy">
-    <meta property="og:image" content="/ogimage.png"
+    <meta property="og:image" content="/ogimage.png">
+    
           
     <title>Actual Work</title>
     <link rel="icon" type="image/x-icon" href="/eye-2-line.svg">
