trying to get og image and title and shit right

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="decription" content="we make building in public fun and easy">
-    <meta property="og:image" content="/ogimage.png">
     
           
     <title>Actual Work</title>
     <link rel="icon" type="image/x-icon" href="/eye-2-line.svg">
+    <meta name="decription" content="we make building in public fun and easy"/>
+    <meta property="og:image" content="/ogimage.png"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
