--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
           
     <title>Actual Work</title>
     <link rel="icon" type="image/x-icon" href="/eye-2-line.svg">
-    <meta name="decription" content="we make building in public fun and easy"/>
+    <meta name="decription" content="we make building in public fun and easy" key="desc"/>
+    <meta property="og:title" content="ActualWork" />
     <meta property="og:image" content="/ogimage.png"/>
     <link rel="stylesheet" href="style.css">
 </head>
