--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="/eye-2-line.svg">
     <meta name="description" content="we make building in public fun and easy" key="desc"/>
     <meta property="og:title" content="ActualWork" />
+    <meta property="og:description" content="we make building in public fun and easy" />
     <meta property="og:image" content="/ogimage.png"/>
     <link rel="stylesheet" href="style.css">
 </head>
