--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:title" content="ActualWork" />
     <meta property="og:description" content="we make building in public fun and easy" />
     <meta property="og:image" content="/ogimage.png"/>
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
