--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
           
     <title>Actual Work</title>
     <link rel="icon" type="image/x-icon" href="/eye-2-line.svg">
-    <meta name="description" content="we make building in public fun and easy" key="desc"/>
-    <meta property="og:title" content="ActualWork" />
-    <meta property="og:description" content="we make building in public fun and easy" />
-    <meta property="og:image" content="/ogimage.png"/>
-    <meta property="og:image:width" content="3600" />
-    <meta property="og:image:height" content="1890" />
+    <meta name="description" content="We make building in public fun and easy.">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="ActualWork">
+<meta itemprop="description" content="We make building in public fun and easy.">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="ActualWork">
+<meta name="twitter:description" content="We make building in public fun and easy.">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="ActualWork">
+<meta name="og:description" content="We make building in public fun and easy.">
+<meta name="og:type" content="website">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
