--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <meta name="twitter:description" content="We make building in public fun and easy.">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="ActualWork">
+    <meta name="og:image" content="/ogimage.png">
 <meta name="og:description" content="We make building in public fun and easy.">
 <meta name="og:type" content="website">
     <link rel="stylesheet" href="style.css">
