--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="ActualWork">
 <meta name="twitter:description" content="We make building in public fun and easy.">
+    <meta name="twitter:image" content="/ogimage.png">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="ActualWork">
     <meta name="og:image" content="/ogimage.png">
